--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "remote-db:migrate": "sequelize db:migrate",
     "remote-seed": "node seed-db.js",
     "client-build": "webpack --config webpack_conf/webpack.prod.js",
-    "client-dev": "webpack --config webpack_conf/webpack.dev.js",
+    "client-dev-build": "webpack --config webpack_conf/webpack.dev.js",
     "server-dev": "nodemon server/index.js",
     "server-prod": "NODE_ENV=production node server/index.js",
     "server-prod-local-db": "node server/index.js",
@@ -44,13 +44,18 @@
     "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@babel/register": "^7.17.7",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.2",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "bootstrap": "^5.1.3",
     "cookie": "^0.4.2",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "css-loader": "^5.2.7",
     "express": "^4.17.1",
@@ -71,6 +76,8 @@
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.8",
+    "typescript": "^4.6.3",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.3.0",
     "webpack-merge": "^5.7.3"
@@ -86,5 +93,8 @@
         }
       ]
     ]
+  },
+  "devDependencies": {
+    "@types/react-dom": "^18.0.1"
   }
 }
