--- a/package.json
+++ b/package.json
@@ -40,47 +40,46 @@
   },
   "homepage": "https://github.com/rocketacademy/webpack-mvc-base-bootcamp#readme",
   "dependencies": {
+    "pg": "^8.7.3",
+    "socket.io": "^4.4.1",
+    "axios": "^0.21.1",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "sequelize": "^6.17.0",
+    "sequelize-cli": "^6.2.0",
+    "express": "^4.17.1",
+    "luxon": "^2.3.1",
+    "mini-css-extract-plugin": "^1.3.3",
+    "moment": "^2.29.2",
+    "nodemon": "^2.0.6",
+    "cookie": "^0.4.2",
+    "sass": "^1.30.0",
+    "js-cookie": "^3.0.1",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.3.0",
+    "webpack-merge": "^5.7.3",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "babel-loader": "^8.2.2",
+    "sass-loader": "^10.1.0",
     "@babel/core": "^7.12.10",
     "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@babel/register": "^7.17.7",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.6.2",
-    "axios": "^0.21.1",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "bootstrap": "^5.1.3",
-    "cookie": "^0.4.2",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "css-loader": "^5.2.7",
-    "express": "^4.17.1",
-    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
-    "js-cookie": "^3.0.1",
-    "luxon": "^2.3.1",
-    "mini-css-extract-plugin": "^1.3.3",
-    "moment": "^2.29.2",
-    "nodemon": "^2.0.6",
-    "pg": "^8.7.3",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "sass": "^1.30.0",
-    "sass-loader": "^10.1.0",
-    "sequelize": "^6.17.0",
-    "sequelize-cli": "^6.2.0",
-    "socket.io": "^4.4.1",
-    "socket.io-client": "^4.4.1",
+    "css-loader": "^5.2.7",
+    "file-loader": "^6.2.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.3",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.3.0",
-    "webpack-merge": "^5.7.3"
+    "socket.io-client": "^4.4.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.2",
+    "@types/react-dom": "^18.0.1"
   },
   "babel": {
     "presets": [
@@ -94,7 +93,5 @@
       ]
     ]
   },
-  "devDependencies": {
-    "@types/react-dom": "^18.0.1"
-  }
+  "devDependencies": {}
 }
