--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "luxon": "^2.3.1",
     "mini-css-extract-plugin": "^1.3.3",
     "moment": "^2.29.2",
