--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "remote-seed": "node seed-db.js",
     "client-build": "webpack --config webpack_conf/webpack.prod.js",
     "client-dev-build": "webpack --config webpack_conf/webpack.dev.js",
-    "server-dev": "nodemon server/index.js",
+    "server-dev": "node server/index.js",
+    "server-dev-once": "nodemon server/index.js",
     "server-prod": "NODE_ENV=production node server/index.js",
     "server-prod-local-db": "node server/index.js",
     "debug": "nodemon --inspect index.js",
