--- a/.sequelizerc
+++ b/.sequelizerc
@@ -3,7 +3,7 @@ const path = require("path")
 
 
 const paths = {
-  "config": path.resolve("server", "database","config", "config.js"),
+  "config": path.resolve("server","config", "db.js"),
   "models-path": path.resolve("server", "database", "models"),
   "seeders-path": path.resolve("server", "database", "seeders"),
   "migrations-path": path.resolve("server", "database", "migrations"),
