--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
+    "react-select": "^5.3.1",
     "redux-thunk": "^2.4.1",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
