change penguin-maps to react-leaflet. penguin-maps sucks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,6 @@
     "allowJs": true,
     "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "include": ["client/components/types/svg.d.ts"]
 }
