--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.2",
     "@reduxjs/toolkit": "^1.8.1",
+    "@types/leaflet": "^1.7.9",
     "@types/react-dom": "^18.0.1",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
@@ -64,6 +65,7 @@
     "html-webpack-plugin": "^4.5.1",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
+    "leaflet": "^1.8.0",
     "luxon": "^2.3.1",
     "mini-css-extract-plugin": "^1.3.3",
     "moment": "^2.29.2",
@@ -71,6 +73,7 @@
     "pg": "^8.7.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-leaflet": "^4.0.0",
     "react-redux": "^8.0.1",
     "react-select": "^5.3.1",
     "redux-thunk": "^2.4.1",
@@ -81,6 +84,7 @@
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
     "style-loader": "^3.3.1",
+    "svg-url-loader": "^7.1.1",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.3",
     "webpack": "^5.70.0",
