--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,8 @@
     "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["client/components/types/svg.d.ts"]
+  "include": [
+    "client/components/types/svg.d.ts",
+    "client/components/types/haversine-offset.d.ts"
+  ]
 }
