--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "css-loader": "^5.2.7",
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
+    "haversine-offset": "^1.0.0",
     "html-webpack-plugin": "^4.5.1",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
