--- a/package.json
+++ b/package.json
@@ -67,9 +67,9 @@
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.8.0",
-    "luxon": "^2.3.1",
+    "luxon": "^2.3.2",
     "mini-css-extract-plugin": "^1.3.3",
-    "moment": "^2.29.2",
+    "node-schedule": "^2.1.0",
     "nodemon": "^2.0.6",
     "pg": "^8.7.3",
     "react": "^18.0.0",
