--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "nodemon": "^2.0.6",
     "pg": "^8.7.3",
     "react": "^18.0.0",
+    "react-countdown": "^2.3.2",
     "react-dom": "^18.0.0",
     "react-leaflet": "^4.0.0",
     "react-redux": "^8.0.1",
